--- a/backend/package.json
+++ b/backend/package.json
@@ -5,25 +5,22 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist && tsc --build",
-    "prestart": "npm run build",
-    "start": "node dist/index.js",
-    "predev": "npm run build",
-    "dev": "concurrently \" tsc -w \" \" nodemon dist/index.js \" "
+    "dev": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.5.2",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.10",
-    "@types/pg": "^8.10.8",
-    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
-    "pg": "^8.11.3",
+    "prisma": "^5.5.2",
     "rimraf": "^5.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
